--- a/index.html
+++ b/index.html
@@ -3,9 +3,26 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Practice Home Page</title>
+    <link rel="stylesheet" href="./styles/style.css" />
+    <title>Home - Callie Fonoimoana's Portfolio</title>
   </head>
+
   <body>
-    <h1>Home</h1>
+    <header>
+      <img
+        src="D:\Documents\GitHub\Fonoimoana-csci181-practice\images\home logo.png"
+        width="48px"
+        height="48px"
+      />
+      <nav>
+        <ul>
+          <li><a href="./">Home</a></li>
+          <li><a href="resume.hmtl">Resume</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <h1>Home</h1>
+    </main>
   </body>
 </html>
