--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <nav>
         <ul>
           <li><a href="./">Home</a></li>
-          <li><a href="./resume.html">Resume</a></li>
+          <li><a href="resume.html">Resume</a></li>
         </ul>
       </nav>
     </header>
