--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <header>
       <img
-        src="D:\Documents\GitHub\Fonoimoana-csci181-practice\images\home logo.png"
+        src="https://imagizer.imageshack.com/img923/517/Z3cM93.png"
         width="48px"
         height="48px"
       />
