--- a/resume.html
+++ b/resume.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <header>
-      <img src="D:\Documents\GitHub\Fonoimoana-csci181-practice\images\wr-resumes-logo.png" width="48px"height="48px"/>
+      <img src="https://imagizer.imageshack.com/img921/6995/lerz3R.png" width="48px"height="48px"/>
       <nav>
         <ul>
           <li><a href="./">Home</a></li>
